Added monitoring blocks and added more changes into it..

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
    
             <h2>Technical Skills</h2>
             <br>
-            <h3>AWS Cloud (2 Years of Experience as a Cloud Engineer)</h3>
+            <h3>AWS Cloud </h3>
             <ul>
                 <li>IAM</li>
                 <li>S3</li>
@@ -225,6 +225,16 @@
                 <li>Azure AKS</li>
             </ul>
             <br>
+            <h3>Google Cloud Platform (GCP)</h3>
+            
+            <ul>
+                <li>Google Cloud VPC</li>
+                <li>Google Compute Engine</li>
+                <li>Cloud SQL</li>
+                <li>Cloud Shell</li>
+                <li>Google Kubernetes Engine (GKE)</li>
+            </ul>
+            <br>
             <h3>On-premises & Other Tools</h3>
           
             <ul>
@@ -246,6 +256,19 @@
                 <li>ArgoCD</li>
             </ul>
             <br>
+            <h1>Monitoring Tools</h1>
+
+            <ul>
+                <li>PRTG Sensor</li>
+                <li>Zabbix</li>
+                <li>ELK STACK</li>
+                <li>AWS CloudWatch</li>
+                <li>GCP Logging & Monitoring</li>
+              <li>Prometheus</li>
+              <li>Grafana</li>
+              <li>Datadog</li>
+            </ul>
+
             <h1>Security Tools</h1>
 
             <ul>
@@ -515,11 +538,11 @@
             <li class="skills-item">
               <div class="title-wrapper">
                 <h5 class="h5">Kubernetes</h5>
-                <data value="55">55%</data>
+                <data value="60">60%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 55%;"></div>
+                <div class="skill-progress-fill" style="width: 60%;"></div>
               </div>
             </li>
 
@@ -551,11 +574,11 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Terraform</h5>
-                <data value="80">80%</data>
+                <data value="70">70%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
+                <div class="skill-progress-fill" style="width: 70%;"></div>
               </div>
             </li>
             <li class="skills-item">
@@ -573,11 +596,11 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Webservers (Apache, Nginx & Tomcat)</h5>
-                <data value="80">80%</data>
+                <data value="75">75%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
+                <div class="skill-progress-fill" style="width: 75%;"></div>
               </div>
             </li>
 
