--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <div class="separator"></div>
 
-        <ul class="social-list">
+<!--         <ul class="social-list">
 
           <li class="social-item">
             <a href="#" class="social-link">
@@ -131,7 +131,7 @@
             </a>
           </li>
 
-        </ul>
+        </ul> -->
 
       </div>
 
@@ -198,10 +198,16 @@
                 <li>CloudTrail</li>
                 <li>CloudWatch</li>
                 <li>VPC</li>
-                <li>Lambda & Eventbridge</li>
+                <li>Lambda</li>
+                <li>Eventbridge</li>
                 <li>EC2</li>
-                <li>Elastic Load Balancing, Autoscaling & Route 53</li>
+                <li>Elastic Load Balancing</li>
+                <li>Autoscaling</li> 
+                <li>Route 53</li>
                 <li>SNS</li>
+                <li>SQS</li>
+                <li>AWS Tramsfer Family</li>
+                <li>AWS CloudFormation</li>
                 <li>DynamoDB</li>
                 <li>RDS</li>
                 <li>Elastic Beanstalk</li>
@@ -247,6 +253,7 @@
             <h1>DevOps (Having almost 1 year of experience)</h1>
             <ul>
                 <li>Linux</li>
+                <li>Bash/Python Scripting</li>
                 <li>Source Code Management (Github & Github Actions, BitBucket)</li>
                 <li>Jenkins</li>
                 <li>Ansible</li>
@@ -255,6 +262,7 @@
                 <li>Kubernetes</li>
                 <li>ArgoCD</li>
             </ul>
+          
             <br>
             <h1>Monitoring Tools</h1>
 
@@ -268,7 +276,7 @@
               <li>Grafana</li>
               <li>Datadog</li>
             </ul>
-
+<br>
             <h1>Security Tools</h1>
 
             <ul>
@@ -276,7 +284,7 @@
                 <li>Trivy</li>
                 <li>Wazuh (SIEM)</li>
             </ul>
-
+<br>
 
         <section class="testimonials">
 
