--- a/index.html
+++ b/index.html
@@ -198,24 +198,26 @@
                 <li>CloudTrail</li>
                 <li>CloudWatch</li>
                 <li>VPC</li>
-                <li>Lambda</li>
-                <li>Eventbridge</li>
                 <li>EC2</li>
                 <li>Elastic Load Balancing</li>
                 <li>Autoscaling</li> 
                 <li>Route 53</li>
-                <li>SNS</li>
-                <li>SQS</li>
-                <li>AWS Tramsfer Family</li>
+                <li>AWS Transfer Family</li>
+                <li>AWS Systems Manager</li>
+                <li>Lambda</li>
+                <li>Eventbridge</li>
+                <li>Simple Notification Service (SNS)</li>
+                <li>Simple Queue Service (SQS) </li>
                 <li>AWS CloudFormation</li>
                 <li>DynamoDB</li>
                 <li>RDS</li>
                 <li>Elastic Beanstalk</li>
-                <li>CICD</li>
-                <li>CLI</li>
+                <li>AWS CICD</li>
+                <li>AWS CLI</li>
                 <li>Datasync</li>
                 <li>Lightsail</li>
-                <li>Amazon Workspaces</li>
+                <li>AWS Managed Active Directory Service</li>
+                <li>Amazon Workspaces </li>
             </ul>
             <br> 
             <h3>Microsoft Azure</h3>
@@ -224,10 +226,10 @@
                 <li>Azure VNet</li>
                 <li>Azure Virtual Machines</li>
                 <li>Azure SQL</li>
-                <li>Azure SQL Managed Instance</li>
+                <li>Azure SQL Managed Instances</li>
                 <li>Azure ACR</li>
                 <li>Azure DevOps</li>
-                <li>Azure App Service</li>
+                <li>Azure App Services</li>
                 <li>Azure AKS</li>
             </ul>
             <br>
@@ -253,7 +255,7 @@
             <h1>DevOps (Having almost 1 year of experience)</h1>
             <ul>
                 <li>Linux</li>
-                <li>Bash/Python Scripting</li>
+                <li>Bash/Python/Powershell Scripting</li>
                 <li>Source Code Management (Github & Github Actions, BitBucket)</li>
                 <li>Jenkins</li>
                 <li>Ansible</li>
