--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <li>Autoscaling</li> 
                 <li>Route 53</li>
                 <li>AWS Transfer Family</li>
-                <li>AWS Systems Manager</li>
+                <li>AWS Systems Manager (SSM) </li>
                 <li>Lambda</li>
                 <li>Eventbridge</li>
                 <li>Simple Notification Service (SNS)</li>
@@ -240,6 +240,7 @@
                 <li>Google Compute Engine</li>
                 <li>Cloud SQL</li>
                 <li>Cloud Shell</li>
+                <li>Cloud Build</li>
                 <li>Google Kubernetes Engine (GKE)</li>
             </ul>
             <br>
@@ -256,7 +257,7 @@
             <ul>
                 <li>Linux</li>
                 <li>Bash/Python/Powershell Scripting</li>
-                <li>Source Code Management (Github & Github Actions, BitBucket)</li>
+                <li>Source Code Management (SVN, Github & Github Actions, BitBucket)</li>
                 <li>Jenkins</li>
                 <li>Ansible</li>
                 <li>Terraform</li>
