--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
                 <li>Cloud SQL</li>
                 <li>Cloud Shell</li>
                 <li>Cloud Build</li>
+                <li>Artifact Registry</li>
                 <li>Google Kubernetes Engine (GKE)</li>
             </ul>
             <br>
