--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <li>Route 53</li>
                 <li>AWS Transfer Family</li>
                 <li>AWS Systems Manager (SSM) </li>
-                <li>Lambda</li>
+                <li>AWS Lambda</li>
                 <li>Eventbridge</li>
                 <li>Simple Notification Service (SNS)</li>
                 <li>Simple Queue Service (SQS) </li>
@@ -258,7 +258,7 @@
             <ul>
                 <li>Linux</li>
                 <li>Bash/Python/Powershell Scripting</li>
-                <li>Source Code Management (SVN, Github & Github Actions, BitBucket)</li>
+                <li>Source Code Management (SVN, Github & Github Actions, BitBucket, GitLab)</li>
                 <li>Jenkins</li>
                 <li>Ansible</li>
                 <li>Terraform</li>
@@ -276,9 +276,9 @@
                 <li>ELK STACK</li>
                 <li>AWS CloudWatch</li>
                 <li>GCP Logging & Monitoring</li>
-              <li>Prometheus</li>
-              <li>Grafana</li>
-              <li>Datadog</li>
+                <li>Prometheus</li>
+                <li>Grafana</li>
+                <li>Datadog</li>
             </ul>
 <br>
             <h1>Security Tools</h1>
