--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MUNEEB UDDIN AHMED</title>
 
+
   <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+
   <link rel="stylesheet" href="./assets/css/style.css">
+
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -58,6 +62,7 @@
               <a href="mailto:muneebuddinahmed97@gmail.com" class="contact-link">muneebuddinahmed97@gmail.com</a>
             </div>
 
+
           </li>
 
           <li class="contact-item">
@@ -106,11 +111,41 @@
 
         <div class="separator"></div>
 
+<!--         <ul class="social-list">
+
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </li>
+
+        </ul> -->
+
       </div>
 
     </aside>
 
+    <!--
+      - #main-content
+    -->
+
     <div class="main-content">
+
+      <!--
+        - #NAVBAR
+      -->
 
       <nav class="navbar">
 
@@ -124,17 +159,22 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Experience</button>
-          </li>
 
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Projects</button>
-          </li>
+          <!-- <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Blog</button>
+          </li> -->
+
+<!--           <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Contact</button>
+          </li> -->
 
         </ul>
 
       </nav>
+
+      <!--
+        - #ABOUT
+      -->
 
       <article class="about  active" data-page="about">
 
@@ -251,6 +291,7 @@
 
         </section>
 
+
         <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
@@ -279,10 +320,15 @@
           </section>
         </div>
 
+
         <section class="clients">
         </section>
 
       </article>
+
+      <!--
+        - #RESUME
+      -->
 
       <article class="resume" data-page="resume">
 
