updated the education section

--- a/index.html
+++ b/index.html
@@ -352,10 +352,10 @@
 
               <h4 class="h4 timeline-item-title">NED University of Engineering & Technology</h4>
 
-              <span>2023 — Present</span>
+              <span> March 2023 — Dec 2024 </span>
 
               <p class="timeline-text">
-                Pursuing a Masters Degree in the field of Information Security(InfoSec) from one of the best universities in Pakistan
+                Completed Masters Degree program in the field of Information Security(InfoSec) from one of the best universities in Pakistan
               </p>
 
             </li> 
@@ -368,7 +368,7 @@
 
               <p class="timeline-text">
                 Completed a Bachelor's degree in Computer Science from one of the reputed universities in Pakistan, with a 2.9 GPA
-                          </p>
+                    </p>
 
             </li>
 
