--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
               <span>2002 — 2014</span>
 
               <p class="timeline-text">
-                Completed Matriculation with <B>B</B> from BSEK (Board of Secondary Education, Karachi)
+                Completed Matriculation with Grade <B>B</B> from BSEK (Board of Secondary Education, Karachi)
                 
               </p>
 
