added more skills

--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
                 <li>AWS CLI</li>
                 <li>Datasync</li>
                 <li>Lightsail</li>
+                <li>Elastic File System (EFS)</li>
+                <li>Amazon FSx</li>
                 <li>AWS Managed Active Directory Service</li>
                 <li>Amazon Workspaces </li>
             </ul>
@@ -236,8 +238,11 @@
             <h3>Google Cloud Platform (GCP)</h3>
             
             <ul>
+                <li>Google Cloud IAM & Admin</li>
                 <li>Google Cloud VPC</li>
                 <li>Google Compute Engine</li>
+                <li>Google App Engine</li>
+                <li>Google Cloud Run</li>
                 <li>Cloud SQL</li>
                 <li>Cloud Shell</li>
                 <li>Cloud Build</li>
