--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <section class="about-text">
           <p>
-            Hello Everyone. My name is Muneeb Uddin Ahmed & I am a self-motivated, quick learner & technology enthusiast with over 2.5 years of experience in the domain of Cloud Computing & DevOps. Proficient in implementing hands-on practical experience and academic knowledge towards IT solutions with an extensive approach in basic networking, virtualization (Citrix XenServer & Microsoft Hyper-V, Vmware and VirtualBox) analysis & recommendation of existing cloud infrastructure, implementation of highly available infrastructure from scratch in On-premises & AWS cloud along with DevOps methodologies including (CI/CD, Containerization, Automation, Orchestration and Monitoring)
+            Hello Everyone. My name is Muneeb Uddin Ahmed & I am a self-motivated, quick learner, technology enthusiast & versatile professional with over 2.5 years of experience in the domain of Cloud Computing & DevOps. Proficient in implementing hands-on practical experience and academic knowledge towards IT solutions with an extensive approach in basic networking, virtualization (Citrix XenServer & Microsoft Hyper-V, Vmware and VirtualBox) analysis & recommendation of existing cloud infrastructure, implementation of highly available infrastructure from scratch in On-premises & AWS cloud along with DevOps methodologies including (CI/CD, Containerization, Automation, Orchestration and Monitoring)
 <br>
             The main objective is to keep myself up-to-date & upgrade in the field of Cloud & DevOps. And to seek a challenging position as a Cloud & DevOps engineer to achieve organizational goals as well as enhance my professional career growth.
    
