--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+9234422212367890" class="contact-link">+9234422212367890</a>
+              <a href="tel:0900 78601 " class="contact-link"> 0900 78601</a>
             </div>
 
           </li>
@@ -292,6 +292,7 @@
             <ul>
                 <li>SonarQube</li>
                 <li>Trivy</li>
+                <li>Wazuh</li>
             </ul>
 <br>
 
